--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: DeclareDesignHelpers
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Helper functions for learning and using the DeclareDesign package with the book "Research Design" (book.declaredesign.org).
+Version: 0.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    c(person("Graeme", "Blair", email = "graeme.blair@ucla.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
+             person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
+             person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
 Description: What the package does (one paragraph).
 Imports: dplyr, rlang, rdrobust
 License: MIT + file LICENSE
@@ -14,3 +12,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: DeclareDesign
+Depends: 
+    R (>= 2.10)
