--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,theme)
