--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: rdddr
-Title: Companion datasets and functions for the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org).
-Version: 0.1
+Title: Companion datasets and functions for the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org)
+Version: 0.1.0
 Authors@R: 
     c(person("Graeme", "Blair", email = "graeme.blair@ucla.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
 Description: What the package does (one paragraph).
-Imports: dplyr, rlang, rdrobust
+Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
