--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Authors@R:
     c(person("Graeme", "Blair", email = "graeme.blair@ucla.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
-Description: Datasets, helper functions, and plotting components to enable replication of the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org)
-Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr
+Description: The package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
+Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr, DIDmultiplegt, broom.mixed, dataverse, estimatr, grf, interference, prediction, readr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
