--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,17 +18,23 @@ export(make_interval_entry)
 export(make_se_entry)
 export(post_stratification_helper)
 export(rdrobust_helper)
+export(rma_estimator)
+export(rma_mu_tau)
 export(theme_dd)
 export(tidy_exponentiate)
 importFrom(DIDmultiplegt,did_multiplegt)
+importFrom(broom,glance)
+importFrom(broom,tidy)
 importFrom(broom.mixed,tidy)
 importFrom(dataverse,get_dataframe_by_name)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,all_of)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
@@ -47,6 +53,7 @@ importFrom(grf,variable_importance)
 importFrom(interference,estimates)
 importFrom(interference,make_exposure_map_AS)
 importFrom(interference,make_exposure_prob)
+importFrom(metafor,rma)
 importFrom(prediction,prediction)
 importFrom(rdrobust,rdrobust)
 importFrom(readr,read_rds)
@@ -56,10 +63,13 @@ importFrom(rlang,enexpr)
 importFrom(rlang,enquo)
 importFrom(rlang,quo)
 importFrom(rlang,quo_is_null)
+importFrom(rlang,quo_text)
+importFrom(stats,confint)
 importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,weighted.mean)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
