rr_forced_known

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(post_stratification_helper)
 export(rdrobust_helper)
 export(rma_estimator)
 export(rma_mu_tau)
+export(rr_forced_known)
 export(theme_dd)
 export(tidy_exponentiate)
 importFrom(DIDmultiplegt,did_multiplegt)
@@ -64,6 +65,7 @@ importFrom(rlang,enquo)
 importFrom(rlang,quo)
 importFrom(rlang,quo_is_null)
 importFrom(rlang,quo_text)
+importFrom(rr,rrreg)
 importFrom(stats,confint)
 importFrom(stats,lm)
 importFrom(stats,predict)
