process tracing estimator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,14 @@ export(lag_by_group)
 export(make_interval_entry)
 export(make_se_entry)
 export(post_stratification_helper)
+export(pt_estimator)
 export(rdrobust_helper)
 export(rma_estimator)
 export(rma_mu_tau)
 export(rr_forced_known)
 export(theme_dd)
 export(tidy_exponentiate)
+importFrom(CausalQueries,query_model)
 importFrom(DIDmultiplegt,did_multiplegt)
 importFrom(broom,glance)
 importFrom(broom,tidy)
