--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
 Description: The package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
-Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr, DIDmultiplegt, broom.mixed, dataverse, estimatr, grf, interference, prediction, readr
+Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr, DIDmultiplegt, broom.mixed, dataverse, estimatr, grf, interference, prediction, readr, CausalQueries
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
