--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(rma_estimator)
 export(rma_mu_tau)
 export(rr_forced_known)
 export(theme_dd)
+export(tidy_amce)
 export(tidy_exponentiate)
 importFrom(CausalQueries,query_model)
 importFrom(DIDmultiplegt,did_multiplegt)
