--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(best_predictor)
 export(causal_forest_handler)
 export(cef_estimator)
 export(cef_inquiry)
+export(conjoint_assignment)
+export(conjoint_inquiries)
+export(conjoint_measurement)
 export(dd_palette)
 export(did_multiplegt_tidy)
 export(dip)
@@ -30,6 +33,7 @@ importFrom(DIDmultiplegt,did_multiplegt)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(broom.mixed,tidy)
+importFrom(cjoint,summary.amce)
 importFrom(dataverse,get_dataframe_by_name)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,all_of)
@@ -41,6 +45,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
@@ -59,6 +64,12 @@ importFrom(interference,make_exposure_map_AS)
 importFrom(interference,make_exposure_prob)
 importFrom(metafor,rma)
 importFrom(prediction,prediction)
+importFrom(purrr,as_vector)
+importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
+importFrom(purrr,pmap_dbl)
+importFrom(randomizr,complete_ra)
 importFrom(rdrobust,rdrobust)
 importFrom(readr,read_rds)
 importFrom(rlang,`!!`)
