--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,20 @@ Package: rdddr
 Title: Companion datasets and functions for the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org)
 Version: 0.1.0
 Authors@R: 
-    c(person("Graeme", "Blair", email = "graeme.blair@ucla.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
+    c(person("Graeme", "Blair", email = "graeme.blair@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
 Description: The package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
-Imports: dplyr, rlang (>= 1.0.0), rdrobust, ggplot2, tibble, tidyr, DIDmultiplegt, broom.mixed, dataverse, estimatr, grf, interference, prediction, readr, CausalQueries, metafor, cjoint, rr, broom, purrr, randomizr
+Imports: dplyr, rlang (>= 1.0.0), generics, ggplot2, tibble, tidyr, dataverse, readr, prediction, broom, purrr, estimatr, randomizr, DeclareDesign, rdrobust, DIDmultiplegt, broom.mixed, grf, interference, CausalQueries, metafor, cjoint, rr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Suggests: 
-    testthat (>= 3.0.0),
-    DeclareDesign
+    testthat (>= 3.0.0)
 Depends: 
     R (>= 2.10)
 Remotes:
     szonszein/interference,
     macartan/CausalQueries
-Config/testthat/edition: 3
