--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,14 +6,23 @@ Authors@R:
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
 Description: The package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
-Imports: dplyr, rlang (>= 1.0.0), generics, ggplot2, tibble, tidyr, dataverse, readr, prediction, broom, purrr, estimatr, randomizr, DeclareDesign, rdrobust, DIDmultiplegt, broom.mixed, grf, interference, CausalQueries, metafor, cjoint, rr
+Imports: dplyr, rlang (>= 1.0.0), generics, ggplot2, tibble, tidyr, dataverse, readr, prediction, broom, purrr, estimatr, randomizr, DeclareDesign
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    rdrobust, 
+    DIDmultiplegt, 
+    broom.mixed, 
+    grf, 
+    interference, 
+    CausalQueries, 
+    metafor, 
+    cjoint, 
+    rr
 Depends: 
     R (>= 2.10)
 Remotes:
