--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(hex_add_alpha)
 export(lag_by_group)
 export(make_interval_entry)
 export(make_se_entry)
+export(mle2_helper)
 export(post_stratification_helper)
 export(process_tracing_estimator)
 export(rdrobust_helper)
