--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ S3method(tidy,rdrobust)
 S3method(tidy,stanreg)
 export(add_parens)
 export(best_predictor)
-export(causal_forest_helper)
+export(causal_forest_handler)
 export(conjoint_assignment)
 export(conjoint_inquiries)
 export(conjoint_measurement)
