--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 S3method(tidy,amce)
 S3method(tidy,rdrobust)
-S3method(tidy,stanreg)
 export(add_parens)
 export(best_predictor)
 export(causal_forest_handler)
@@ -27,6 +26,7 @@ export(rma_mu_tau)
 export(rr_predict_tidy)
 export(theme_dd)
 export(tidy)
+export(tidy_stan)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dataverse,get_dataframe_by_name)
