--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,pmap_dbl)
 importFrom(randomizr,complete_ra)
+importFrom(randomizr,complete_rs)
 importFrom(readr,read_rds)
 importFrom(rlang,`!!`)
 importFrom(rlang,`:=`)
