--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(rlang,enexpr)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_text)
 importFrom(stats,confint)
+importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,weighted.mean)
