--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(purrr,as_vector)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
+importFrom(purrr,partial)
 importFrom(purrr,pmap_dbl)
 importFrom(randomizr,complete_ra)
 importFrom(randomizr,complete_rs)
