--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rdddr
-Title: Companion datasets and functions for the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org)
+Title: Companion Datasets and Functions for the Book "Research Design: Declare, Diagnose, Redesign"
 Version: 1.0.0
 Authors@R: 
     c(person("Graeme", "Blair", email = "graeme.blair@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9164-2102")),
              person("Alexander", "Coppock", email = "acoppock@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0002-5733-2386")),
              person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut"), comment = c(ORCID = "0000-0001-7029-2326")))
-Description: The package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
+Description: This package is a companion to the book "Research Design: Declare, Diagnose, Redesign" (https://book.declaredesign.org). rdddr includes datasets, helper functions, and plotting components to enable use and replication of the book. 
 Imports: dplyr, rlang (>= 1.0.0), generics, ggplot2, tibble, tidyr, dataverse, readr, prediction, broom, purrr, fabricatr, estimatr, randomizr, DeclareDesign
 License: MIT + file LICENSE
 Encoding: UTF-8
