causalqueries on cran

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,5 @@ Suggests:
 Depends: 
     R (>= 2.10)
 Remotes:
-    szonszein/interference,
-    macartan/CausalQueries
+    szonszein/interference
 Config/testthat/edition: 3
