--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(did_multiplegt_tidy)
 export(estimator_AS_tidy)
 export(format_num)
 export(get_exposure_AS)
-export(get_rdddr_file)
+export(get_rdss_file)
 export(hex_add_alpha)
 export(lag_by_group)
 export(make_interval_entry)
