cran up plus causal queries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(process_tracing_estimator)
 export(rdrobust_helper)
 export(rma_helper)
 export(rma_mu_tau)
+export(strategy_statements)
 export(theme_dd)
 export(tidy)
 export(tidy_stan)
